<?xml version="1.0"?>
<package format="2">
  <name>epos_interface</name>
  <version>0.0.0</version>
  <description>Interface to steering motor EPOS controller</description>
  <maintainer email="alplepe02@gmail.com">alvaro</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>common_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
